--- a/library_base/src/main/res/values/colors.xml
+++ b/library_base/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="base_color_theme">#55aff4</color>
+    <color name="base_filtrate_color">#1f767680</color>
 </resources>
