--- a/module_home/src/main/res/layouts/fragments/layout/home_fragment.xml
+++ b/module_home/src/main/res/layouts/fragments/layout/home_fragment.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="这是首页"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        layout="@layout/home_include_toolbar"/>
+</LinearLayout>
