--- a/module_mine/src/main/res/layouts/fragments/layout/mine_fragment.xml
+++ b/module_mine/src/main/res/layouts/fragments/layout/mine_fragment.xml
@@ -1,19 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.knight.kotlin.module_mine.fragment.MineFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:text="这是我的页面"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/mine_iv_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/mine_icon_message_margin_top"
+            android:layout_marginRight="@dimen/mine_icon_message_margin_right"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/mine_icon_message"/>
+
+        <RelativeLayout
+            android:id="@+id/mine_rl_user_head"
+            android:layout_width="@dimen/mine_rl_user_head_width"
+            android:layout_height="@dimen/mine_rl_user_head_height"
+            android:layout_marginTop="@dimen/mine_rl_user_head_margin_top"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/mine_iv_head"
+                android:layout_width="@dimen/mine_iv_head_width"
+                android:layout_height="@dimen/mine_iv_head_height"
+                android:layout_centerVertical="true"
+                android:background="@drawable/mine_iv_default_head"/>
+
+            <TextView
+                android:id="@+id/mine_tv_userabbr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/mine_tv_userabbr_textsize"
+                android:textStyle="bold"/>
+
+
+
+
+        </RelativeLayout>
+        <TextView
+            android:id="@+id/mine_tv_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/mine_tv_username_margin_top"
+            android:textSize="@dimen/mine_tv_username_textsize"
+            android:text="@string/mine_please_login"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/mine_rl_user_head"/>
+
+        <LinearLayout
+            android:id="@+id/mine_ll_rank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/mine_ll_rank_margin_top"
+            android:gravity="center"
+            android:orientation="horizontal"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/mine_tv_username">
+
+
+            <TextView
+                android:id="@+id/mine_tv_level"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/mine_gradle_flag"
+                android:textSize="@dimen/mine_tv_level_textsize"/>
+
+
+            <TextView
+                android:id="@+id/mine_tv_rank"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/mine_tv_rank"
+                android:layout_marginLeft="@dimen/mine_tv_rank_margin_left"
+                android:textSize="@dimen/mine_tv_rank_textsize"/>
+        </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/mine_cv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/mine_cv_margin_left"
+            android:layout_marginRight="@dimen/mine_cv_margin_right"
+            android:layout_marginTop="@dimen/mine_cv_margin_top"
+            app:cardCornerRadius="@dimen/mine_cv_corner_radius"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/mine_ll_rank"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/mine_ll_point_padding_left"
+                android:paddingRight="@dimen/mine_ll_point_padding_right">
+
+                <!--我的积分-->
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/mine_rl_point_margin_top"
+                    android:layout_marginBottom="@dimen/mine_rl_point_margin_bottom">
+
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/mine_me_points"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/mine_tv_point_flag"/>
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="@dimen/mine_tv_points_margin_right"
+                        android:layout_toLeftOf="@+id/mine_iv_point_arrow"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/mine_tv_point_flag"
+                        />
+
+                    <ImageView
+                        android:id="@+id/mine_iv_point_arrow"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:background="@drawable/mine_iv_arrow"/>
+
+                </RelativeLayout>
+
+
+
+
+            </LinearLayout>
+
+
+        </androidx.cardview.widget.CardView>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</ScrollView>
