--- a/library_base/src/main/res/values/dimens.xml
+++ b/library_base/src/main/res/values/dimens.xml
@@ -29,4 +29,5 @@
     <dimen name="base_dimen_100">100dp</dimen>
     <dimen name="base_dimen_120">120dp</dimen>
     <dimen name="base_dimen_150">150dp</dimen>
+    <dimen name="base_line_height">0.5dp</dimen>
 </resources>
