--- a/module_mine/src/main/res/values/dimens.xml
+++ b/module_mine/src/main/res/values/dimens.xml
@@ -24,4 +24,17 @@
     <dimen name="mine_rl_point_margin_bottom">20dp</dimen>
     <dimen name="mine_tv_point_flag">18sp</dimen>
     <dimen name="mine_tv_points_margin_right">2dp</dimen>
+    <dimen name="mine_rl_collect_margin_top">20dp</dimen>
+    <dimen name="mine_rl_collect_margin_bottom">20dp</dimen>
+    <dimen name="mine_tv_collect_textsize">18sp</dimen>
+    <dimen name="mine_rl_share_margin_top">20dp</dimen>
+    <dimen name="mine_rl_share_margin_bottom">20dp</dimen>
+    <dimen name="mine_tv_share_article_textsize">18sp</dimen>
+    <dimen name="mine_rl_history_records_margin_top">20dp</dimen>
+    <dimen name="mine_rl_history_records_margin_bottom">20dp</dimen>
+    <dimen name="mine_tv_history_record_textsize">18sp</dimen>
+    <dimen name="mine_rl_system_set_margin_top">20dp</dimen>
+    <dimen name="mine_rl_system_set_margin_bottom">20dp</dimen>
+    <dimen name="mine_tv_system_setting_textsize">18sp</dimen>
+
 </resources>
