--- a/module_welcome/src/main/res/values-v21/styles.xml
+++ b/module_welcome/src/main/res/values-v21/styles.xml
@@ -1,8 +1,7 @@
 <!--启动页背景-->
 <resources>
-    <style name="welcomeAppSplash" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="welcomeAppSplash" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/welcome_splash_bg</item>
-        <item name="android:windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
     </style>
 </resources>
