--- a/module_home/src/main/res/values/dimens.xml
+++ b/module_home/src/main/res/values/dimens.xml
@@ -5,4 +5,17 @@
      <dimen name="home_magic_height">50dp</dimen>
      <dimen name="home_magicindicator_marginright">6dp</dimen>
      <dimen name="home_label_margin_right">8dp</dimen>
+     <dimen name="home_push_vp_height">360dp</dimen>
+     <dimen name="home_push_iv_close_margin_top">15dp</dimen>
+     <dimen name="home_push_article_cv_height">320dp</dimen>
+     <dimen name="home_push_article_cv_radius">10dp</dimen>
+     <dimen name="home_tv_push_article_author_textsize">16dp</dimen>
+     <dimen name="home_tv_push_article_author_padding">4dp</dimen>
+     <dimen name="home_tv_article_title_margin_left">16dp</dimen>
+     <dimen name="home_tv_article_title_margin_top">10dp</dimen>
+     <dimen name="home_tv_article_title_textsize">18dp</dimen>
+     <dimen name="home_tv_article_desc_margin_left">16dp</dimen>
+     <dimen name="home_tv_article_desc_margin_bottom">10dp</dimen>
+     <dimen name="home_tv_article_desc_margin_top">5dp</dimen>
+     <dimen name="home_tv_article_desc_textsize">16dp</dimen>
 </resources>
