--- a/module_home/src/main/res/values-night/colors.xml
+++ b/module_home/src/main/res/values-night/colors.xml
@@ -8,4 +8,16 @@
     <color name="home_everypush_bottom_message">#303030</color>
     <color name="home_push_article_title">#D3D3D3</color>
     <color name="home_push_article_desc">#666666</color>
+    <color name="home_opensource_abroadlink_label">#D3D3D3</color>
+    <color name="home_opensource_internallink_label">#D3D3D3</color>
+    <color name="home_opensource_desc">#D3D3D3</color>
+    <color name="home_top_article_title">#D3D3D3</color>
+    <color name="home_rl_message">#303030</color>
+    <color name="home_tv_unread_message">#D3D3D3</color>
+    <color name="home_top_article_rv">#303030</color>
+    <color name="home_rv_official_account">#303030</color>
+    <color name="home_rv_official_bottom_view">#000000</color>
+    <color name="home_bg_item_article">#303030</color>
+    <color name="home_tv_article_title_color">#D3D3D3</color>
+    <color name="home_item_article_bottom_color">#000000</color>
 </resources>
