--- a/module_home/src/main/res/values/dimens.xml
+++ b/module_home/src/main/res/values/dimens.xml
@@ -18,4 +18,74 @@
      <dimen name="home_tv_article_desc_margin_bottom">10dp</dimen>
      <dimen name="home_tv_article_desc_margin_top">5dp</dimen>
      <dimen name="home_tv_article_desc_textsize">16dp</dimen>
+     <dimen name="home_second_level_margin_bottom">54dp</dimen>
+     <dimen name="home_icon_fab_margin_right">20dp</dimen>
+     <dimen name="home_icon_fab_margin_bottom">70dp</dimen>
+     <dimen name="home_opensource_margin_top">8dp</dimen>
+     <dimen name="home_opensource_margin_left">16dp</dimen>
+     <dimen name="home_opensource_margin_right">16dp</dimen>
+     <dimen name="home_opensource_margin_bottom">6dp</dimen>
+     <dimen name="home_opensource_cv_radius">6dp</dimen>
+     <dimen name="home_opensource_cl_margin_bottom">8dp</dimen>
+     <dimen name="home_opensource_title_margin_top">8dp</dimen>
+     <dimen name="home_opensource_title_margin_left">8dp</dimen>
+     <dimen name="home_opensource_title_padding_right">8dp</dimen>
+     <dimen name="home_opensource_title_text_size">16sp</dimen>
+     <dimen name="home_opensource_abroad_label_margin_top">8dp</dimen>
+     <dimen name="home_opensource_abroad_label_text_size">16sp</dimen>
+     <dimen name="home_opensource_abroad_margin_left">8dp</dimen>
+     <dimen name="home_opensource_abroad_margin_top">8dp</dimen>
+     <dimen name="home_opensource_abroadlink_text_size">16sp</dimen>
+     <dimen name="home_opensource_internallink_label_margin_top">8dp</dimen>
+     <dimen name="home_opensource_internallink_label_text_size">16sp</dimen>
+     <dimen name="home_opensource_internallink_margin_left">8dp</dimen>
+     <dimen name="home_opensource_internallink_margin_top">8dp</dimen>
+     <dimen name="home_opensource_internallink_text_size">16sp</dimen>
+     <dimen name="home_opensource_desc_text_size">16sp</dimen>
+     <dimen name="home_opensource_desc_margin_top">4dp</dimen>
+     <dimen name="home_opensource_desc_margin_left">8dp</dimen>
+     <dimen name="home_opensource_desc_margin_right">8dp</dimen>
+     <dimen name="home_top_article_title_margin_left">16dp</dimen>
+     <dimen name="home_top_article_title_margin_top">10dp</dimen>
+     <dimen name="home_top_article_title_margin_right">16dp</dimen>
+     <dimen name="home_top_article_title_text_size">16sp</dimen>
+     <dimen name="home_top_article_author_margin_left">6dp</dimen>
+     <dimen name="home_top_article_author_text_size">14sp</dimen>
+     <dimen name="home_rl_message_height">40dp</dimen>
+     <dimen name="home_iv_message_margin_left">16dp</dimen>
+     <dimen name="home_red_round_margin_top">6dp</dimen>
+     <dimen name="home_tv_unread_message_margin_left">10dp</dimen>
+     <dimen name="home_tv_unread_message_text_size">16sp</dimen>
+     <dimen name="home_banner_height">160dp</dimen>
+     <dimen name="home_banner_margin_top">10dp</dimen>
+     <dimen name="home_rv_bottom_line_height">8dp</dimen>
+     <dimen name="home_tv_seemorearticles_height">40dp</dimen>
+     <dimen name="home_tv_seemorearticles_text_size">12sp</dimen>
+     <dimen name="home_iv_toparticlearrow_margin_left">4dp</dimen>
+     <dimen name="home_item_article_author_margin_left">16dp</dimen>
+     <dimen name="home_item_article_author_margin_top">16dp</dimen>
+     <dimen name="home_item_article_author_padding_right">8dp</dimen>
+     <dimen name="home_item_article_author_text_size">12sp</dimen>
+     <dimen name="home_item_article_new_flag_margin_right">8dp</dimen>
+     <dimen name="home_item_article_new_flag_text_size">12sp</dimen>
+     <dimen name="home_item_article_chaptername_margin_right">8dp</dimen>
+     <dimen name="home_item_article_chapter_name_padding_left">4dp</dimen>
+     <dimen name="home_item_article_chapter_name_padding_top">2dp</dimen>
+     <dimen name="home_item_article_chapter_name_padding_right">4dp</dimen>
+     <dimen name="home_item_article_chapter_name_padding_bottom">2dp</dimen>
+     <dimen name="home_item_article_chaptername_text_size">12sp</dimen>
+     <dimen name="home_icon_collect_margin_right">8dp</dimen>
+     <dimen name="home_tv_articletitle_margin_left">16dp</dimen>
+     <dimen name="home_tv_articletitle_margin_top">10dp</dimen>
+     <dimen name="home_tv_articletitle_margin_right">16dp</dimen>
+     <dimen name="home_tv_article_title_text_size">16sp</dimen>
+     <dimen name="home_tv_articledesc_margin_top">10dp</dimen>
+     <dimen name="home_tv_articledesc_text_size">12sp</dimen>
+     <dimen name="home_article_bottom_view_height">8dp</dimen>
+     <dimen name="home_article_data_margin_top">10dp</dimen>
+     <dimen name="home_article_data_margin_right">8dp</dimen>
+     <dimen name="home_article_data_margin_bottom">16dp</dimen>
+     <dimen name="home_article_data_text_size">12sp</dimen>
+
+
 </resources>
