--- a/module_home/src/main/res/values/dimens.xml
+++ b/module_home/src/main/res/values/dimens.xml
@@ -86,6 +86,51 @@
      <dimen name="home_article_data_margin_right">8dp</dimen>
      <dimen name="home_article_data_margin_bottom">16dp</dimen>
      <dimen name="home_article_data_text_size">12sp</dimen>
-
-
+     <dimen name="home_draglayout_indicator_height">20dp</dimen>
+     <dimen name="home_draglayout_visible_height">150dp</dimen>
+     <dimen name="home_draglayout_height">320dp</dimen>
+     <dimen name="home_draglayout_ll_height">150dp</dimen>
+     <dimen name="home_toparticle_desc_margin_left">26dp</dimen>
+     <dimen name="home_toparticle_desc_padding_right">10dp</dimen>
+     <dimen name="home_toparticle_desc_text_size">16sp</dimen>
+     <dimen name="home_toparticle_superchaptername_margin_left">26dp</dimen>
+     <dimen name="home_toparticle_superchaptername_margin_top">10dp</dimen>
+     <dimen name="home_toparticle_superchaptername_textsize">15sp</dimen>
+     <dimen name="home_toparticle_superchaptername_padding_bottom">2dp</dimen>
+     <dimen name="home_toparticle_superchaptername_padding_top">2dp</dimen>
+     <dimen name="home_toparticle_superchaptername_padding_left">4dp</dimen>
+     <dimen name="home_toparticle_superchaptername_padding_right">4dp</dimen>
+     <dimen name="home_toparticle_draglayout_line_height">1dp</dimen>
+     <dimen name="home_toparticle_draglayout_line_margin_top">10dp</dimen>
+     <dimen name="home_toparticle_draglayout_rl_margin_left">26dp</dimen>
+     <dimen name="home_toparticle_draglayout_rl_margin_top">10dp</dimen>
+     <dimen name="home_toparticle_draglayout_rl_margin_right">10dp</dimen>
+     <dimen name="home_toparticle_date_text_size">15sp</dimen>
+     <dimen name="home_aspect_cardview_margin_left">10dp</dimen>
+     <dimen name="home_aspect_cardview_margin_right">10dp</dimen>
+     <dimen name="home_aspect_cardview_margin_bottom">20dp</dimen>
+     <dimen name="home_aspect_corner_radius">5dp</dimen>
+     <dimen name="home_aspect_card_elevate">6dp</dimen>
+     <dimen name="home_aspect_max_card_elevate">6dp</dimen>
+     <dimen name="home_toparticle_iv_height">280dp</dimen>
+     <dimen name="home_toparticle_author_margin_left">16dp</dimen>
+     <dimen name="home_toparticle_author_margin_bottom">16dp</dimen>
+     <dimen name="home_toparticle_author_drawable_padding">2dp</dimen>
+     <dimen name="home_toparticle_author_text_size">15sp</dimen>
+     <dimen name="home_toparticle_author_padding_top">2dp</dimen>
+     <dimen name="home_toparticle_author_padding_bottom">2dp</dimen>
+     <dimen name="home_toparticle_author_padding_left">4dp</dimen>
+     <dimen name="home_toparticle_author_paddding_right">4dp</dimen>
+     <dimen name="home_tv_toparticle_title_margin_left">16dp</dimen>
+     <dimen name="home_tv_toparticle_title_margin_right">16dp</dimen>
+     <dimen name="home_tv_toparticle_title_text_size">16sp</dimen>
+     <dimen name="home_rv_toparticles_margin_left">30dp</dimen>
+     <dimen name="home_rv_toparticles_margin_bottom">50dp</dimen>
+     <dimen name="home_iv_circle_close_margin_left">16dp</dimen>
+     <dimen name="home_iv_circle_close_margin_top">40dp</dimen>
+     <dimen name="home_rl_top_article_around_width">68dp</dimen>
+     <dimen name="home_rl_top_article_around_height">68dp</dimen>
+     <dimen name="home_rl_top_article_width">52dp</dimen>
+     <dimen name="home_rl_top_article_height">52dp</dimen>
+     <dimen name="home_tv_toparticle_author_text_size">16sp</dimen>
 </resources>
