--- a/library_base/src/main/res/values/colors.xml
+++ b/library_base/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="base_color_theme">#55aff4</color>
     <color name="base_filtrate_color">#1f767680</color>
     <color name="base_line_color">#dddddd</color>
+    <color name="base_color_transparent">#00000000</color>
 </resources>
