新增公众号(未完成)

--- a/module_home/src/main/res/values/colors.xml
+++ b/module_home/src/main/res/values/colors.xml
@@ -30,4 +30,5 @@
      <color name="home_toparticle_desc_color">#333333</color>
      <color name="home_toparticle_date_color">#333333</color>
      <color name="home_toparticle_author_color">#333333</color>
+     <color name="home_tv_officialaccount_name_color">#333333</color>
 </resources>
