--- a/module_home/src/main/res/values-night/colors.xml
+++ b/module_home/src/main/res/values-night/colors.xml
@@ -23,4 +23,5 @@
     <color name="home_toparticle_desc_color">#D3D3D3</color>
     <color name="home_toparticle_date_color">#D3D3D3</color>
     <color name="home_toparticle_author_color">#D3D3D3</color>
+    <color name="home_tv_officialaccount_name_color">#D3D3D3</color>
 </resources>
