--- a/library_widget/src/main/res/values/colors.xml
+++ b/library_widget/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="widget_title_color">#333333</color>
     <color name="widget_toolbar_text_right_color">#111111</color>
     <color name="widget_recycleview_bg_color">#ffffff</color>
+    <color name="widget_gesturelock_dot_color">#AACCCCCC</color>
+    <color name="widget_gesturelock_dot_pressed_color">#FFBBBBBB</color>
+    <color name="widget_gesturelock_line_color">#55CCCCCC</color>
 </resources>
