--- a/library_widget/src/main/res/values/dimens.xml
+++ b/library_widget/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="widget_compat_toolbar_left">16dp</dimen>
     <dimen name="widget_compat_toolbar_text_size">18sp</dimen>
     <dimen name="widget_compat_toolbar_iv_right">12dp</dimen>
+    <dimen name="widget_gesture_default_dot_radius">4dp</dimen>
+    <dimen name="widget_gesture_default_line_width">8dp</dimen>
+    <dimen name="widget_gesture_default_dot_pressed_radius">4dp</dimen>
 </resources>
