--- a/module_mine/src/main/res/values/dimens.xml
+++ b/module_mine/src/main/res/values/dimens.xml
@@ -36,5 +36,45 @@
     <dimen name="mine_rl_system_set_margin_top">20dp</dimen>
     <dimen name="mine_rl_system_set_margin_bottom">20dp</dimen>
     <dimen name="mine_tv_system_setting_textsize">18sp</dimen>
-
+    <dimen name="mine_tv_gesture_time_margin_top">4dp</dimen>
+    <dimen name="mine_tv_gesture_time_margin_left">20dp</dimen>
+    <dimen name="mine_tv_gesture_time_text_size">18sp</dimen>
+    <dimen name="mine_tv_gesturelock_height">250dp</dimen>
+    <dimen name="mine_tv_gesturelock_margin_end">50dp</dimen>
+    <dimen name="mine_tv_gesturelock_margin_start">50dp</dimen>
+    <dimen name="mine_tv_gesturelock_margin_top">76dp</dimen>
+    <dimen name="mine_tv_gesturelock_more_margin_bottom">30dp</dimen>
+    <dimen name="mine_tv_gesture_lock_more_text_size">16sp</dimen>
+    <dimen name="mine_tv_fingure_login_height">45dp</dimen>
+    <dimen name="mine_tv_fingure_login_text_size">16sp</dimen>
+    <dimen name="mine_tv_quicklogin_cancel_height">45dp</dimen>
+    <dimen name="mine_tv_fingure_login_cancel_text_size">16sp</dimen>
+    <dimen name="mine_login_tv_appname_margin_start">20dp</dimen>
+    <dimen name="mine_login_tv_appname_margin_top">40dp</dimen>
+    <dimen name="mine_login_tv_appname_text_size">26sp</dimen>
+    <dimen name="mine_login_cardview_margin_left">20dp</dimen>
+    <dimen name="mine_login_cardview_margin_top">20dp</dimen>
+    <dimen name="mine_login_cardview_margin_right">20dp</dimen>
+    <dimen name="mine_login_cardview_corner_radius">6dp</dimen>
+    <dimen name="mine_ll_login_margin_left">20dp</dimen>
+    <dimen name="mine_ll_login_margin_top">30dp</dimen>
+    <dimen name="mine_ll_login_margin_right">20dp</dimen>
+    <dimen name="mine_ll_login_margin_bottom">50dp</dimen>
+    <dimen name="mine_tv_accountname_text_size">20sp</dimen>
+    <dimen name="mine_login_username_margin_top">16dp</dimen>
+    <dimen name="mine_login_username_text_size">16sp</dimen>
+    <dimen name="mine_login_username_line_height">1dp</dimen>
+    <dimen name="mine_login_username_line_margin_top">12dp</dimen>
+    <dimen name="mine_tv_password_margin_top">20dp</dimen>
+    <dimen name="mine_tv_password_text_size">20sp</dimen>
+    <dimen name="mine_login_password_margin_top">16dp</dimen>
+    <dimen name="mine_login_password_text_size">16sp</dimen>
+    <dimen name="mine_login_password_line_height">1dp</dimen>
+    <dimen name="mine_login_password_line_margin_top">12dp</dimen>
+    <dimen name="mine_rl_login_margin_top">20dp</dimen>
+    <dimen name="mine_tv_login_width">158dp</dimen>
+    <dimen name="mine_tv_login_height">52dp</dimen>
+    <dimen name="mine_mine_tv_login_text_size">16sp</dimen>
+    <dimen name="mine_tv_register_margin_right">22dp</dimen>
+    <dimen name="mine_tv_register_text_size">14sp</dimen>
 </resources>
